@@ -251,7 +251,10 @@ static void console_exec (void)
 
     top_n_tail(cbuf);
 
-    if (strcmp(cbuf, "quit") == 0 || strcmp(cbuf, "q") == 0) {
+    if (strcmp(cbuf, "quit") == 0 || 
+	strcmp(cbuf, "q") == 0 ||
+	strcmp(cbuf, "exit") == 0 ||
+	strcmp(cbuf, "x") == 0) {
 	gtk_widget_destroy(console_view->parent->parent->parent);
 	g_free(cbuf);
 	cbuf = NULL;
