@@ -1,4 +1,6 @@
 version 1.3.0
+- fix bug in running scripts from the gretl console:
+  file was not closed when an error was encountered
 - fix bug in Prais-Winsten estimator
 - fix bug in influential observations printout, for non-
   English locales
